--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,7 @@ label {
 	padding: 5px 0 5px 0;
 	margin: 5px 0;
 	display: inline-block;
-	font-weight: 600;
-	text-shadow: 1px 1px #7e7e7e;
+	font-weight: 500;
 }
 
 
@@ -50,7 +49,7 @@ h1 {
 	text-transform: capitalize;
 	font-size: 1.75em;
 	margin: 0;
-	background-color: black;
+	background-color: #2D3945;
 }
 
 header:first-child,
@@ -72,7 +71,7 @@ input[type=tel],
 select {
 	width: 100%;
 	height: 60px;
-	border-radius: 10px;
+	border-radius: 5px;
 	margin: 0;
 	padding: 7px;
 	font-size: 1.15em;
@@ -110,6 +109,7 @@ button {
   textarea{
 	  width: 100%;
 	  background-color: lightgrey;
+	  border-radius: 4px;
   }
 
   input[type=checkbox], 
